fixed nav links spacing, added readme skeleton, fixed white space on landing page

--- a/frontend/src/components/DashboardPage/DashboardPage.css
+++ b/frontend/src/components/DashboardPage/DashboardPage.css
@@ -4,6 +4,11 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.356);
 }
 
+.columns-wrapper {
+    padding-top: 42px;
+}
+
 .middle-column {
     height: 820px;
 }
+
