--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -114,7 +114,6 @@ html, body {
 #main-content {
     width: 100%;
     /* position: fixed; */
-    margin-top: 42px;
 }
 
 .columns-wrapper {
